sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:16: error: type mismatch;
 found   : Unit
 required: Boolean
	 	} while (swap = true)
                              ^